<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessingAround</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="users_name_edit_text_hint">Your Name</string>
    <string name="happy_question">Are you happy?</string>
    <string name="yes_button">Yes</string>
    <string name="yes_button_hint">Press me</string>
    <string name="no_button">No</string>
    <string name="no">Dont Press me</string>

</resources>
